# shira

./: .gitignore  README.md  pyproject.toml
shira/: _module_panel.py  _object_panel.py  _search.py  shira.py  shira.scss
